--- a/zimmer.yaml
+++ b/zimmer.yaml
@@ -2,4 +2,4 @@ name: chess
 version: v0.0
 aswan_projects:
   lichess:
-    current_leaf: e7cddf359c5ebb514ff0
+    current_leaf: '31509368950496377829'
