--- a/zimmer.yaml
+++ b/zimmer.yaml
@@ -2,4 +2,4 @@ name: chess
 version: v0.0
 aswan_projects:
   lichess:
-    current_leaf: '31509368950496377829'
+    current_leaf: f503489b12955f0c8bd6
